--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1366,28 +1366,152 @@
                         </div>
                         <div class="commodity-span">
                             <ul>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
-                                <li><a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
-                                            alt="">米家互联网洗烘一体机</a><span>2199元</span></li>
+                                <li>
+                                    <div class="span_img">
+                                        <a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                                alt=""></a>
+                                    </div>
+                                    <h3 class="span_title">
+                                        <a href="">米家互联网洗烘一体机10kg</a>
+                                    </h3>
+                                    <p class="desc"></p>
+                                    <p class="price">2199元</p>
+                                    <div class="span_bottom">
+                                        <p class="span_comment">挺好看的，洗得也干净，白色很简单，好看</p>
+                                        <p class="span_user">来自于白羊莹小姐的评价</p>
+                                    </div>
+                                </li>
+                                <li><span class="flagstate old">减500元</span>
+                                    <div class="span_img">
+                                        <a href=""><img
+                                                src="https://i1.mifile.cn/a1/pms_1545286017.38639954!220x220.jpg"
+                                                alt=""></a>
+                                    </div>
+                                    <h3 class="span_title">
+                                        <a href="">米家互联网空调（一级能效）</a>
+                                    </h3>
+                                    <p class="desc"></p>
+                                    <p class="price">2199元<s style="color: #b0b0b0; margin-left: 5px;">2699元</s></p>
+                                    <div class="span_bottom">
+                                        <p class="span_comment">挺好看的，洗得也干净，白色很简单，好看</p>
+                                        <p class="span_user">来自于白羊莹小姐的评价</p>
+                                    </div>
+                                </li>
+                                <li><span class="flagstate new">新品</span>
+                                    <div class="span_img">
+                                        <a href=""><img src="https://i1.mifile.cn/a4/xmad_15350951136177_QUuVm.png"
+                                                alt=""></a>
+                                    </div>
+                                    <h3 class="span_title">
+                                        <a href="">15.6"笔记本 i5 4G MX110</a>
+                                    </h3>
+                                    <p class="desc"></p>
+                                    <p class="price">4199元</p>
+                                    <div class="span_bottom">
+                                        <p class="span_comment">挺好看的，洗得也干净，白色很简单，好看</p>
+                                        <p class="span_user">来自于白羊莹小姐的评价</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="span_img">
+                                        <a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                                alt=""></a>
+                                    </div>
+                                    <h3 class="span_title">
+                                        <a href="">米家互联网洗烘一体机10kg</a>
+                                    </h3>
+                                    <p class="desc"></p>
+                                    <p class="price">2199元</p>
+                                    <div class="span_bottom">
+                                        <p class="span_comment">挺好看的，洗得也干净，白色很简单，好看</p>
+                                        <p class="span_user">来自于白羊莹小姐的评价</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="span_img">
+                                        <a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                                alt=""></a>
+                                    </div>
+                                    <h3 class="span_title">
+                                        <a href="">米家互联网洗烘一体机10kg</a>
+                                    </h3>
+                                    <p class="desc"></p>
+                                    <p class="price">2199元</p>
+                                    <div class="span_bottom">
+                                        <p class="span_comment">挺好看的，洗得也干净，白色很简单，好看</p>
+                                        <p class="span_user">来自于白羊莹小姐的评价</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="span_img">
+                                        <a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                                alt=""></a>
+                                    </div>
+                                    <h3 class="span_title">
+                                        <a href="">米家互联网洗烘一体机10kg</a>
+                                    </h3>
+                                    <p class="desc"></p>
+                                    <p class="price">2199元</p>
+                                    <div class="span_bottom">
+                                        <p class="span_comment">挺好看的，洗得也干净，白色很简单，好看</p>
+                                        <p class="span_user">来自于白羊莹小姐的评价</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="span_img">
+                                        <a href=""><img src="https://i1.mifile.cn/a4/xmad_15512365381648_yZpKS.jpg"
+                                                alt=""></a>
+                                    </div>
+                                    <h3 class="span_title">
+                                        <a href="">米家互联网洗烘一体机10kg</a>
+                                    </h3>
+                                    <p class="desc"></p>
+                                    <p class="price">2199元</p>
+                                    <div class="span_bottom">
+                                        <p class="span_comment">挺好看的，洗得也干净，白色很简单，好看</p>
+                                        <p class="span_user">来自于白羊莹小姐的评价</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="span_last_img">
+                                        <a href="">
+                                            <img src="https://i1.mifile.cn/a1/pms_1521634907.16181074!220x220.jpg"
+                                                alt="">
+                                        </a>
+                                    </div>
+                                    <h3 class="span_last_title">
+                                        <a href="">小米净水器...</a>
+                                    </h3>
+                                    <p class="price">1999元</p>
+                                </li>
+                                <li>
+                                    <div class="span_more">
+                                        <a href="" class="iconfont icon-chakangengduo1"></a>
+                                    </div>
+                                    <a href="" class="title_more">
+                                        浏览更多
+                                        <small>热门</small>
+                                    </a>
+
+
+                                </li>
                             </ul>
                         </div>
                     </div>
                 </div>
+                <div class="page-title">
+
+                        <h2>为你推荐</h2>
+                        <div class="title-kind">
+                            <ul>
+                                <li><a>热门</a></li>
+                                <li><a>电视影音</a></li>
+                                <li><a>电脑</a></li>
+                                <li><a>家居</a></li>
+                            </ul>
+                        </div>
+    
+                    </div>
             </div>
         </main>
     </div>
