为什么上传了显示有问题

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1502,14 +1502,14 @@
                 <div class="page-title">
 
                         <h2>为你推荐</h2>
-                        <div class="title-kind">
+                        <!-- <div class="title-kind">
                             <ul>
                                 <li><a>热门</a></li>
                                 <li><a>电视影音</a></li>
                                 <li><a>电脑</a></li>
                                 <li><a>家居</a></li>
                             </ul>
-                        </div>
+                        </div> -->
     
                     </div>
             </div>
