--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1343,21 +1343,22 @@
                 <div class="page-ad">
                     <a href=""><img src="https://i1.mifile.cn/a4/xmad_15595260886_oDbVR.jpg" alt=""></a>
                 </div>
-                <div class="page-title">
 
-                    <h2>家电</h2>
-                    <div class="title-kind">
-                        <ul>
-                            <li><a>热门</a></li>
-                            <li><a>电视影音</a></li>
-                            <li><a>电脑</a></li>
-                            <li><a>家居</a></li>
-                        </ul>
-                    </div>
-
-                </div>
                 <div class="page-commodity">
+
                     <div class="commodity">
+                        <div class="page-title">
+
+                            <h2>家电</h2>
+                            <div class="title-kind">
+                                <ul>
+                                    <li><a>热门</a></li>
+                                    <li><a>电视影音</a></li>
+                                    <li><a>电脑</a></li>
+                                    <li><a>家居</a></li>
+                                </ul>
+                            </div>
+                        </div>
                         <div class="commodity-ad">
                             <ul>
                                 <li><a><img src="https://i1.mifile.cn/a4/xmad_15021710762698_QXnBu.jpg"></a></li>
@@ -1499,19 +1500,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="page-title">
-
-                        <h2>为你推荐</h2>
-                        <!-- <div class="title-kind">
-                            <ul>
-                                <li><a>热门</a></li>
-                                <li><a>电视影音</a></li>
-                                <li><a>电脑</a></li>
-                                <li><a>家居</a></li>
-                            </ul>
-                        </div> -->
-    
+                <div class="page-switch">
+                    <h2>为你推荐</h2>
+                    <div class="page-switchbox">
+                        <button class="iconfont icon-icon-test"></button><button
+                            class="iconfont icon-icon-test1"></button>
                     </div>
+                </div>
             </div>
         </main>
     </div>
