又是搬砖的一天

--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="top.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="bottom.css">
     <link rel="stylesheet" href="./iconfont/iconfont.css">
     <title>小米首页</title>
 </head>
@@ -1500,12 +1501,300 @@
                         </div>
                     </div>
                 </div>
-                <div class="page-switch">
-                    <h2>为你推荐</h2>
-                    <div class="page-switchbox">
-                        <button class="iconfont icon-icon-test"></button><button
-                            class="iconfont icon-icon-test1"></button>
+                <div class="page-recommend">
+                    <h2 style="text-align: left">为你推荐</h2>
+                    <div class="recommend-switch">
+                        <input type="radio" name="checked" id="row1" checked>
+
+                        <input type="radio" name="checked" id="row2">
+
+                        <input type="radio" name="checked" id="row3">
+
+                        <input type="radio" name="checked" id="row4">
+
+                        <div class="" id="check-left">
+                            <label for="row1" class="iconfont icon-icon-test"></label>
+                            <label for="row2" class="iconfont icon-icon-test"></label>
+                            <label for="row3" class="iconfont icon-icon-test"></label>
+                            <label for="row4" class="iconfont icon-icon-test"></label>
+                        </div>
+                        <div class="" id="check-right">
+                            <label for="row1" class="iconfont icon-icon-test1"></label>
+                            <label for="row2" class="iconfont icon-icon-test1"></label>
+                            <label for="row3" class="iconfont icon-icon-test1"></label>
+                            <label for="row4" class="iconfont icon-icon-test1"></label>
+                        </div>
+                        <ul class="recommend">
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/pms_1531991398.10913701!140x140.jpg" alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>小米红外遥控器</p>
+                                        <p style="color: #ff6700">39元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/pms_1529908092.36119266!140x140.jpg" alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p> ZMI 苹果编织数据线（0.3m） </p>
+                                        <p style="color: #ff6700">49元</p>
+                                        <p style="color: #757575">277人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/pms_1557490451.12382394!140x140.jpg" alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>小米路由器Mesh</p>
+                                        <p style="color: #ff6700">999元</p>
+                                        <p style="color: #757575">376人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/pms_1559026302.90843637!140x140.jpg" alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p> RedmiBook 14 i7 8G 512GB MX250 </p>
+                                        <p style="color: #ff6700">4999元</p>
+                                        <p style="color: #757575">21人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/pms_1559026302.90843637!140x140.jpg" alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p> RedmiBook 14 i7 8G 512GB MX250 </p>
+                                        <p style="color: #ff6700">4999元</p>
+                                        <p style="color: #757575">21人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/pms_1529908092.36119266!140x140.jpg" alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p> ZMI 苹果编织数据线（0.3m） </p>
+                                        <p style="color: #ff6700">49元</p>
+                                        <p style="color: #757575">277人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="recommend-span">
+                                    <div class="recommendimg">
+                                        <img src="https://i1.mifile.cn/a1/7c59c959d89a30ed227e8111e9e896d7!140x140.png"
+                                            alt="">
+                                    </div>
+                                    <div class="recommending-text">
+                                        <p>最生活毛巾.Air(100条装)</p>
+                                        <p style="color: #ff6700">299元</p>
+                                        <p style="color: #757575">1147人好评</p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
+                </div>
+                <div class="hotproduct">
+                    <h2>热评产品</h2>
+                    <ul>
+                        <li>
+                            <img src="" alt="">
+                            <p>
+                                收到净水机后，马上就安排了安装，实在是难以表达内心的激动。首先作为一个米粉看到家里又添置一件小米的设...
+                            </p>
+                        </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </div>
             </div>
         </main>
