--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -1786,14 +1786,53 @@
                     <h2>热评产品</h2>
                     <ul>
                         <li>
-                            <img src="" alt="">
-                            <p>
-                                收到净水机后，马上就安排了安装，实在是难以表达内心的激动。首先作为一个米粉看到家里又添置一件小米的设...
-                            </p>
+                            <img src="https://i1.mifile.cn/a4/xmad_1560324008766_HNafb.jpg" alt="">
+                            <p class="review"><a href="">
+                                    离我的小米智能之家又近了一步，安装师傅专业细致，原门锁挡片不是很贴合，师傅免费帮忙换了一片。门锁反
+                                </a></p>
+                                <p class="author">来自于 七七七 的评价</p>
+                                <div class="info">
+                                    <h3><a href="">小米米家智能门锁 碳素黑</a></h3>
+                                    <span class="sep">|</span>
+                                    <p class="price">1199元</p>
+                                </div>
                         </li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>
+                            <img src="https://i1.mifile.cn/a4/xmad_15603271856346_WZBAr.jpg" alt="">
+                            <p class="review"><a href="">
+                                在小区拍的，照相很清晰，性价比高，值得购买。
+                                </a></p>
+                                <p class="author">来自于 茫然 的评价</p>
+                                <div class="info">
+                                    <h3><a href="">Redmi K20 全网通版 6GB+128GB 火焰红</a></h3>
+                                    <span class="sep">|</span>
+                                    <p class="price">1199元</p>
+                                </div>
+                        </li>
+                        <li>
+                            <img src="https://i1.mifile.cn/a4/xmad_15603254311846_Kxrnd.jpg" alt="">
+                            <p class="review"><a href="">
+                                准确率很高，很轻巧，非常不错的充气泵，值得拥有！
+                                </a></p>
+                                <p class="author">来自于 陆林楠 的评价</p>
+                                <div class="info">
+                                    <h3><a href="">米家充气宝</a></h3>
+                                    <span class="sep">|</span>
+                                    <p class="price">1199元</p>
+                                </div>
+                        </li>
+                        <li>
+                            <img src="https://i1.mifile.cn/a4/xmad_15603261094939_GNcdD.jpg" alt="">
+                            <p class="review"><a href="">
+                                收到净水机后，马上就安排了安装，实在是难以表达内心的激动。首先作为一个米粉看到家里又添置一件小米的设...
+                                </a></p>
+                                <p class="author">来自于 DEVIL 的评价</p>
+                                <div class="info">
+                                    <h3><a href="">小米净水器600G</a></h3>
+                                    <span class="sep">|</span>
+                                    <p class="price">1199元</p>
+                                </div>
+                        </li>
                     </ul>
                 </div>
             </div>
