修改了两题错误

--- a/miao/noi.html
+++ b/miao/noi.html
@@ -28,7 +28,7 @@
 <script id="ch0103/05">
     var a = Number(prompt())
     var b = Number(prompt())
-    console.log(a / b.toFixed(9))
+    alert((a / b).toFixed(9))
 </script>
 
 <script id="ch0103/06">
