--- a/miao/test.html
+++ b/miao/test.html
@@ -1,7 +1,5 @@
-<script id="ch0103/19">
-    var a=2
-    var n=Number(prompt())
-    if(n>=0&&n<31){
-        alert(Math.pow(a,n))
-    }
+<script id="ch0103/05">
+    var a = Number(prompt())
+    var b = Number(prompt())
+    alert((a / b).toFixed(9))
 </script>
