--- a/miao/test.html
+++ b/miao/test.html
@@ -1,5 +1,9 @@
-<script id="ch0103/05">
+<script id="ch0103/03">
     var a = Number(prompt())
     var b = Number(prompt())
-    alert((a / b).toFixed(9))
+    var c = Number(prompt())
+    if(a>-1000&&a<10000&&b>-1000&&b<10000&&c>-1000&&c<10000){
+        alert(Math.floor((a + b) / c))
+    }
+
 </script>
