--- a/miao/test.html
+++ b/miao/test.html
@@ -2,8 +2,8 @@
     var a = Number(prompt())
     var b = Number(prompt())
     var c = Number(prompt())
-    if(a>-1000&&a<10000&&b>-1000&&b<10000&&c>-1000&&c<10000){
-        alert(Math.floor((a + b) / c))
+    if(a>-10000&&a<10000&&b>-10000&&b<10000&&c>-10000&&c<10000&&c!=0){
+        alert(parseInt(a + b) / c)
     }
 
 </script>
