--- a/miao/noi.html
+++ b/miao/noi.html
@@ -16,7 +16,7 @@
     var b = Number(prompt())
     var c = Number(prompt())
     if(a>-10000&&a<10000&&b>-10000&&b<10000&&c>-10000&&c<10000&&c!=0){
-        alert((a + b) / c)
+        alert(parseInt(a + b) / c)
     }
 
 </script>
