--- a/miao/noi.html
+++ b/miao/noi.html
@@ -11,7 +11,7 @@
     console.log((a + b) * c)
 </script>
 
-<script id="ch0103/03">
+<!-- <script id="ch0103/03">
     var a = Number(prompt())
     var b = Number(prompt())
     var c = Number(prompt())
@@ -20,7 +20,13 @@
     }
 
 </script>
-
+此处存疑 提交未通过 -->
+<script id="ch0103/03">
+    var a = Number(prompt ("请输入a的值"))
+    var b = Number(prompt ("请输入b的值"))
+    var c = Number(prompt ("请输入c的值"))
+    console.log( parseInt((a + b) / c))
+</script>
 
 <script id="ch0103/04">
     var a = Number(prompt())
