--- a/miao/test.html
+++ b/miao/test.html
@@ -1,4 +1,4 @@
-<script id="ch0103/03">
+<!-- <script id="ch0103/03">
     var a = Number(prompt())
     var b = Number(prompt())
     var c = Number(prompt())
@@ -7,3 +7,4 @@
     }
 
 </script>
+此处存疑 提交未通过 -->
