--- a/miao/noi.html
+++ b/miao/noi.html
@@ -11,21 +11,11 @@
     console.log((a + b) * c)
 </script>
 
-<!-- <script id="ch0103/03">
-    var a = Number(prompt())
-    var b = Number(prompt())
-    var c = Number(prompt())
-    if(a>-10000&&a<10000&&b>-10000&&b<10000&&c>-10000&&c<10000&&c!=0){
-        alert(parseInt(a + b) / c)
-    }
-
-</script>
-此处存疑 提交未通过 -->
 <script id="ch0103/03">
-    var a = Number(prompt ("请输入a的值"))
-    var b = Number(prompt ("请输入b的值"))
-    var c = Number(prompt ("请输入c的值"))
-    console.log( parseInt((a + b) / c))
+    var a = Number(prompt("请输入a的值"))
+    var b = Number(prompt("请输入b的值"))
+    var c = Number(prompt("请输入c的值"))
+    console.log(parseInt((a + b) / c))
 </script>
 
 <script id="ch0103/04">
@@ -106,17 +96,17 @@
 <script id="ch0103/14">
     var h = Number(prompt())
     var r = Number(prompt())
-    var pi =3.14159
-    var n=20*1000
-    var v=pi*Math.pow(r,2)*h
-    alert(Math.ceil(n/v))
+    var pi = 3.14159
+    var n = 20 * 1000
+    var v = pi * Math.pow(r, 2) * h
+    alert(Math.ceil(n / v))
 </script>
 
 <script id="ch0103/15">
     var n = Number(prompt())
     var x = Number(prompt())
     var y = Number(prompt())
-    var value=n-y*(1/x)
+    var value = n - y * (1 / x)
     alert(Math.floor(value))
 </script>
 
@@ -125,7 +115,7 @@
     var ya = Number(prompt())
     var xb = Number(prompt())
     var yb = Number(prompt())
-    var d =(Math.pow(xb-xa,2)+Math.pow(yb-ya,2))
+    var d = (Math.pow(xb - xa, 2) + Math.pow(yb - ya, 2))
     alert(Math.sqrt(d).toFixed(3))
 </script>
 
@@ -136,36 +126,36 @@
     var y2 = Number(prompt())
     var x3 = Number(prompt())
     var y3 = Number(prompt())
-    var a=Math.sqrt((Math.pow(x2-x1,2)+Math.pow(y2-y1,2)))
-    var b=Math.sqrt((Math.pow(x3-x1,2)+Math.pow(y3-y1,2)))
-    var c=Math.sqrt((Math.pow(x3-x2,2)+Math.pow(y3-y2,2)))
-    var p=(a+b+c)/2
-    var s=Math.sqrt(p*(p-a)*(p-b)*(p-c))
+    var a = Math.sqrt((Math.pow(x2 - x1, 2) + Math.pow(y2 - y1, 2)))
+    var b = Math.sqrt((Math.pow(x3 - x1, 2) + Math.pow(y3 - y1, 2)))
+    var c = Math.sqrt((Math.pow(x3 - x2, 2) + Math.pow(y3 - y2, 2)))
+    var p = (a + b + c) / 2
+    var s = Math.sqrt(p * (p - a) * (p - b) * (p - c))
     alert(s.toFixed(2))
 </script>
 
 <script id="ch0103/18">
-    var a1=Number(prompt())
-    var a2=Number(prompt())
-    var n=Number(prompt())
-    if(a1>=-100&&a2<=100&&n>0&&n<=1000){
-        alert(a1+(n-1)*(a2-a1))
+    var a1 = Number(prompt())
+    var a2 = Number(prompt())
+    var n = Number(prompt())
+    if (a1 >= -100 && a2 <= 100 && n > 0 && n <= 1000) {
+        alert(a1 + (n - 1) * (a2 - a1))
     }
 
 </script>
 
 <script id="ch0103/19">
-    var a=Number(prompt())
-    var b=Number(prompt())
-    if(a>=1&&b<=50000){
-        alert(a*b)
+    var a = Number(prompt())
+    var b = Number(prompt())
+    if (a >= 1 && b <= 50000) {
+        alert(a * b)
     }
 </script>
 
 <script id="ch0103/20">
-    var a=2
-    var n=Number(prompt())
-    if(n>=0&&n<31){
-        alert(Math.pow(a,n))
+    var a = 2
+    var n = Number(prompt())
+    if (n >= 0 && n < 31) {
+        alert(Math.pow(a, n))
     }
 </script>
