--- a/miao/test.html
+++ b/miao/test.html
@@ -8,3 +8,13 @@
 
 </script>
 此处存疑 提交未通过 -->
+<script id="ch0104/04">
+    var Str=String(prompt())
+    var n=Str.charCodeAt()
+    n=parseInt(n)
+    if((n+1)%2===0){
+        alert("YES")
+    }else if(n%2===0){
+        alert("NO")
+    }
+</script>
