--- a/miao/noi.html
+++ b/miao/noi.html
@@ -201,3 +201,15 @@
         alert("NO")
     }
 </script>
+
+<script id="ch0104/05">
+    var x=Number(prompt())
+    var y=Number(prompt())
+    if(x>y){
+        alert(">")
+    }else if(x===y){
+        alert("=")
+    }else if(x<y){
+        alert("<")
+    }
+</script>
