--- a/miao/test.html
+++ b/miao/test.html
@@ -8,13 +8,14 @@
 
 </script>
 此处存疑 提交未通过 -->
-<script id="ch0104/04">
-    var Str=String(prompt())
-    var n=Str.charCodeAt()
-    n=parseInt(n)
-    if((n+1)%2===0){
-        alert("YES")
-    }else if(n%2===0){
-        alert("NO")
+<script id="ch0104/05">
+    var x=Number(prompt())
+    var y=Number(prompt())
+    if(x>y){
+        alert(">")
+    }else if(x===y){
+        alert("=")
+    }else if(x<y){
+        alert("<")
     }
 </script>
